--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/multi-select-list/read-multi-select-list-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/multi-select-list/read-multi-select-list-field.html
@@ -1,8 +1,9 @@
+<div class="hide-table-caption" id="multi-select-list">{{caseField.value[0]}}</div>
 <table *ngIf="caseField.value && caseField.value.length" class="multi-select-list-field-table"
-       [attr.aria-describedby]="'multi selection table' | rpxTranslate">
+       [attr.aria-describedby]="'multi-select-list' | rpxTranslate">
   <tbody>
     <tr *ngFor="let value of caseField.value">
-      <th style="display: none;"></th>
+      <th style="display: none;">&ZeroWidthSpace;</th>
       <td><span class="text-16">{{ value | ccdFixedList:caseField.field_type.fixed_list_items | rpxTranslate}}</span></td>
     </tr>
   </tbody>
