--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-viewer/case-full-access-view/case-full-access-view.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-viewer/case-full-access-view/case-full-access-view.component.html
@@ -1,4 +1,36 @@
 <!-- Generic error heading and error message to be displayed only if there are no specific callback errors or warnings, or no error details -->
+<div *ngIf="error && !(error.callbackErrors || error.callbackWarnings || error.details)" class="error-summary"
+role="group" aria-labelledby="edit-case-event_error-summary-heading" tabindex="-1">
+<h1 class="heading-h1 error-summary-heading" id="edit-case-event_error-summary-heading">
+{{'Something went wrong' | rpxTranslate}}
+</h1>
+<div class="govuk-error-summary__body" id="edit-case-event_error-summary-body">
+<p>{{"We're working to fix the problem. Try again shortly." | rpxTranslate}}</p>
+<p>
+ <a href="get-help" target="_blank">
+   {{"Contact us" | rpxTranslate}}</a> {{"if you're still having problems." | rpxTranslate}}
+</p>
+</div>
+</div>
+<!-- Callback error heading and error message to be displayed if there are specific error details -->
+<div *ngIf="error && error.details" class="error-summary" role="group"
+aria-labelledby="edit-case-event_error-summary-heading" tabindex="-1">
+<h2 class="heading-h2 error-summary-heading" id="edit-case-event_error-summary-heading">
+{{'The callback data failed validation' | rpxTranslate}}
+</h2>
+<p>{{error.message | rpxTranslate}}</p>
+<ul *ngIf="error.details?.field_errors" class="error-summary-list">
+<li *ngFor="let fieldError of error.details.field_errors">
+ {{fieldError.message | rpxTranslate}}
+</li>
+</ul>
+</div>
+<ccd-callback-errors
+[triggerTextContinue]="triggerTextStart"
+[triggerTextIgnore]="triggerTextIgnoreWarnings"
+[callbackErrorsSubject]="callbackErrorsSubject"
+(callbackErrorsContext)="callbackErrorsNotify($event)">
+</ccd-callback-errors>
 <ccd-activity [caseId]="caseDetails.case_id" [displayMode]="BANNER"></ccd-activity>
 <div class="grid-row">
   <div class="column-one-half">
