--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-editor/case-edit-submit/case-edit-submit.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-editor/case-edit-submit/case-edit-submit.html
@@ -111,7 +111,7 @@
       (eventCanBeCompleted)="onEventCanBeCompleted($event)">
     </ccd-case-event-completion>
     <div class="form-group form-group-related">
-      <button *ngIf="!caseEdit.isCaseFlagSubmission" class="button button-secondary" type="button" [disabled]="!hasPrevious() || caseEdit.isSubmitting" (click)="previous()">
+      <button class="button button-secondary" type="button" [disabled]="!hasPrevious() || caseEdit.isSubmitting" (click)="previous()">
         {{'Previous' | rpxTranslate}}
       </button>
       <button type="submit" [disabled]="isDisabled" class="button">
