--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/collection/read-collection-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/collection/read-collection-field.html
@@ -1,4 +1,4 @@
-<table *ngIf="caseField.value && caseField.value.length " class="collection-field-table"  id="collection" aria-describedby="collection table">
+<table *ngIf="caseField.value && caseField.value.length " class="collection-field-table"  id="{{caseField.id}}" [attr.aria-describedby]="caseField.id">
   <ng-container [ngSwitch]="isDisplayContextParameterAvailable">
     <tbody *ngSwitchCase="true">
     <tr>
