--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-viewer/case-full-access-view/case-full-access-view.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-viewer/case-full-access-view/case-full-access-view.component.html
@@ -1,55 +1,52 @@
 <!-- Generic error heading and error message to be displayed only if there are no specific callback errors or warnings, or no error details -->
 <div *ngIf="error && !(error.callbackErrors || error.callbackWarnings || error.details)" class="error-summary"
-role="group" aria-labelledby="edit-case-event_error-summary-heading" tabindex="-1">
-<h1 class="heading-h1 error-summary-heading" id="edit-case-event_error-summary-heading">
-{{'Something went wrong' | rpxTranslate}}
-</h1>
-<div class="govuk-error-summary__body" id="edit-case-event_error-summary-body">
-<p>{{"We're working to fix the problem. Try again shortly." | rpxTranslate}}</p>
-<p>
- <a href="get-help" target="_blank">
-   {{"Contact us" | rpxTranslate}}</a> {{"if you're still having problems." | rpxTranslate}}
-</p>
-</div>
+  role="group" aria-labelledby="edit-case-event_error-summary-heading" tabindex="-1">
+  <h1 class="heading-h1 error-summary-heading" id="edit-case-event_error-summary-heading">
+    {{'Something went wrong' | rpxTranslate}}
+  </h1>
+  <div class="govuk-error-summary__body" id="edit-case-event_error-summary-body">
+    <p>{{"We're working to fix the problem. Try again shortly." | rpxTranslate}}</p>
+    <p>
+      <a href="get-help" target="_blank">
+        {{"Contact us" | rpxTranslate}}</a> {{"if you're still having problems." | rpxTranslate}}
+    </p>
+  </div>
 </div>
 <!-- Callback error heading and error message to be displayed if there are specific error details -->
 <div *ngIf="error && error.details" class="error-summary" role="group"
-aria-labelledby="edit-case-event_error-summary-heading" tabindex="-1">
-<h2 class="heading-h2 error-summary-heading" id="edit-case-event_error-summary-heading">
-{{'The callback data failed validation' | rpxTranslate}}
-</h2>
-<p>{{error.message | rpxTranslate}}</p>
-<ul *ngIf="error.details?.field_errors" class="error-summary-list">
-<li *ngFor="let fieldError of error.details.field_errors">
- {{fieldError.message | rpxTranslate}}
-</li>
-</ul>
+  aria-labelledby="edit-case-event_error-summary-heading" tabindex="-1">
+  <h2 class="heading-h2 error-summary-heading" id="edit-case-event_error-summary-heading">
+    {{'The callback data failed validation' | rpxTranslate}}
+  </h2>
+  <p>{{error.message | rpxTranslate}}</p>
+  <ul *ngIf="error.details?.field_errors" class="error-summary-list">
+    <li *ngFor="let fieldError of error.details.field_errors">
+      {{fieldError.message | rpxTranslate}}
+    </li>
+  </ul>
 </div>
-<ccd-callback-errors
-[triggerTextContinue]="triggerTextStart"
-[triggerTextIgnore]="triggerTextIgnoreWarnings"
-[callbackErrorsSubject]="callbackErrorsSubject"
-(callbackErrorsContext)="callbackErrorsNotify($event)">
+<ccd-callback-errors [triggerTextContinue]="triggerTextStart" [triggerTextIgnore]="triggerTextIgnoreWarnings"
+  [callbackErrorsSubject]="callbackErrorsSubject" (callbackErrorsContext)="callbackErrorsNotify($event)">
 </ccd-callback-errors>
 <ccd-activity [caseId]="caseDetails.case_id" [displayMode]="BANNER"></ccd-activity>
 <div class="grid-row">
   <div class="column-one-half">
     <ccd-case-header [caseDetails]="caseDetails"></ccd-case-header>
     <div class="case-viewer-controls" *ngIf="hasPrint && !isDraft() && isPrintEnabled()">
-      <a id="case-viewer-control-print" routerLink="print" class="button button-secondary">{{'Print' | rpxTranslate}}</a>
+      <a id="case-viewer-control-print" routerLink="print" class="button button-secondary">{{'Print' |
+        rpxTranslate}}</a>
     </div>
   </div>
   <div *ngIf="hasEventSelector" class="column-one-half">
     <ccd-event-trigger [isDisabled]="isTriggerButtonDisabled()" [triggers]="caseDetails.triggers"
-                       [triggerText]="triggerText"
-                       [eventId]="eventId"
-                       (onTriggerChange)="clearErrorsAndWarnings()"
-                       (onTriggerSubmit)="applyTrigger($event)"></ccd-event-trigger>
+      [triggerText]="triggerText" [eventId]="eventId" (onTriggerChange)="clearErrorsAndWarnings()"
+      (onTriggerSubmit)="applyTrigger($event)"></ccd-event-trigger>
   </div>
 </div>
 <div class="grid-row" *ngIf="activeCaseFlags && !caseFlagsExternalUser">
   <div class="column-full">
-    <ccd-notification-banner [notificationBannerConfig]="notificationBannerConfig" (linkClicked)="onLinkClicked($event)">
+    <ccd-notification-banner [notificationBannerConfig]="notificationBannerConfig"
+      (linkClicked)="onLinkClicked($event)">
     </ccd-notification-banner>
   </div>
 </div>
@@ -62,40 +59,41 @@ aria-labelledby="edit-case-event_error-summary-heading" tabindex="-1">
         </mat-tab>
         <mat-tab *ngFor="let tab of sortedTabs; let curIdx=index" [id]="tab.id" [label]="tab.label | rpxTranslate">
           <ng-template matTabContent>
-            <div class="hide-table-capion" id="table_caption">{{tab.label  | rpxTranslate}}</div>
+            <div class="hide-table-capion" id="table_caption">{{tab.label | rpxTranslate}}</div>
             <table class="olaaa" [class]="tab.id" aria-labelledby="table_caption">
               <tbody>
-              
-              <ng-container *ngFor="let field of tab | ccdTabFields | ccdReadFieldsFilter:false :undefined :true : formGroup.controls['data']">
-                <div ccdLabelSubstitutor [caseField]="field" [contextFields]="caseFields" [hidden]="field.hidden">
-                  <ng-container [ngSwitch]="!(field | ccdIsCompound)">
-                    <tr *ngSwitchCase="true">
-                      <th id="case-viewer-field-label" *ngIf="!isFieldToHaveNoLabel(field)">
-                        <div class="case-viewer-label text-16">
-                          {{field.label | rpxTranslate}}&ZeroWidthSpace;</div>
-                      </th>
-                      <td [id]="'case-viewer-field-read--' + field.id" scope="col">
-                        <span class="text-16">
-                          <ccd-field-read [topLevelFormGroup]="formGroup?.controls['data']"
-                                          [caseField]="field" [caseReference]="caseDetails.case_id"
-                                          [markdownUseHrefAsRouterLink]="markdownUseHrefAsRouterLink">
-                          </ccd-field-read>
-                        </span>
-                      </td>
-                    </tr>
-                    <tr *ngSwitchCase="false" class="compound-field">
-                      <th [id]="'case-viewer-field-read--' + field.id" scope="col">
-                        <span class="text-16">
-                          <ccd-field-read [topLevelFormGroup]="formGroup.controls['data']"
-                                          [caseField]="field" [caseReference]="caseDetails.case_id"
-                                          [markdownUseHrefAsRouterLink]="markdownUseHrefAsRouterLink">
-                          </ccd-field-read>
-                        </span>&ZeroWidthSpace;
-                      </th>
-                    </tr>
-                  </ng-container>
-                </div>
-              </ng-container>
+
+                <ng-container
+                  *ngFor="let field of tab | ccdTabFields | ccdReadFieldsFilter:false :undefined :true : formGroup.controls['data']">
+                  <div ccdLabelSubstitutor [caseField]="field" [contextFields]="caseFields" [hidden]="field.hidden">
+                    <ng-container [ngSwitch]="!(field | ccdIsCompound)">
+                      <tr *ngSwitchCase="true">
+                        <th id="case-viewer-field-label" *ngIf="!isFieldToHaveNoLabel(field)">
+                          <div class="case-viewer-label text-16">
+                            {{field.label | rpxTranslate}}&ZeroWidthSpace;</div>
+                        </th>
+                        <td [id]="'case-viewer-field-read--' + field.id" scope="col">
+                          <span class="text-16">
+                            <ccd-field-read [topLevelFormGroup]="formGroup?.controls['data']" [caseField]="field"
+                              [caseReference]="caseDetails.case_id"
+                              [markdownUseHrefAsRouterLink]="markdownUseHrefAsRouterLink">
+                            </ccd-field-read>
+                          </span>
+                        </td>
+                      </tr>
+                      <tr *ngSwitchCase="false" class="compound-field">
+                        <th [id]="'case-viewer-field-read--' + field.id" scope="col">
+                          <span class="text-16">
+                            <ccd-field-read [topLevelFormGroup]="formGroup.controls['data']" [caseField]="field"
+                              [caseReference]="caseDetails.case_id"
+                              [markdownUseHrefAsRouterLink]="markdownUseHrefAsRouterLink">
+                            </ccd-field-read>
+                          </span>&ZeroWidthSpace;
+                        </th>
+                      </tr>
+                    </ng-container>
+                  </div>
+                </ng-container>
               </tbody>
             </table>
           </ng-template>
@@ -103,7 +101,8 @@ aria-labelledby="edit-case-event_error-summary-heading" tabindex="-1">
         <mat-tab *ngFor="let tab of appendedTabs" [id]="tab.id" [label]="tab.label | rpxTranslate">
         </mat-tab>
       </mat-tab-group>
-      <router-outlet *ngIf="(prependedTabs && prependedTabs.length) || (appendedTabs && appendedTabs.length)"></router-outlet>
+      <router-outlet
+        *ngIf="(prependedTabs && prependedTabs.length) || (appendedTabs && appendedTabs.length)"></router-outlet>
     </ng-container>
   </div>
 </div>
