Ex UI 1270 accessibility bug fixes (#1693)
* arial bug fixes

* version change

* PR comment fix

* aria description added

* version number change

* version number change

* accessibilty issues fix

* unit test

* version number change

* restore removed html segment

* unneeded console log removed

* console log removed

* changes from PR review

* page properly indented

* unneeded css class removed

* released notes updated

* version updated

* version updated

---------

Co-authored-by: RiteshHMCTS <74713687+RiteshHMCTS@users.noreply.github.com>
Co-authored-by: Ritesh Dsouza <ritesh.dsouza@HMCTS.net>

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/base-field/field-read.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/base-field/field-read.html
@@ -1,4 +1,4 @@
-<div [hidden]="caseField.hidden">
+<div  id="{{caseField.id}}" [hidden]="caseField.hidden">
   <ccd-field-read-label [formGroup]="formGroup" [topLevelFormGroup]="topLevelFormGroup" [caseField]="caseField" [withLabel]="withLabel" [markdownUseHrefAsRouterLink]="markdownUseHrefAsRouterLink">
     <ng-container #fieldContainer></ng-container>
   </ccd-field-read-label>
