--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/complex/read-complex-field-table.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/complex/read-complex-field-table.html
@@ -1,6 +1,6 @@
 <div class="complex-panel">
-  <dl class="complex-panel-title"><dt><span class="text-16">{{caseField.label | rpxTranslate}}</span></dt><dd></dd></dl>
-  <table class="complex-panel-table" aria-describedby="complex field table">
+  <dl class="complex-panel-title"><dt><span id="{{caseField.id}}" class="text-16">{{caseField.label | rpxTranslate}}</span></dt><dd></dd></dl>
+  <table class="complex-panel-table" [attr.aria-describedby]="caseField.id">
     <tbody>
       <ng-container *ngFor="let field of caseField | ccdReadFieldsFilter:false :undefined :true :topLevelFormGroup: undefined :idPrefix">
         <ng-container *ngIf="(field | ccdIsCompound); else SimpleRow">
@@ -15,7 +15,7 @@
         </ng-container>
         <ng-template #SimpleRow>
           <tr class="complex-panel-simple-field" [hidden]="field.hidden">
-            <th id="complex-panel-simple-field-label"><span class="text-16">{{field.label | rpxTranslate}}</span></th>
+            <th id="complex-panel-simple-field-label"><span class="text-16">{{field.label | rpxTranslate}}</span>&ZeroWidthSpace;</th>
             <td>
                 <span class="text-16">
                   <ccd-field-read [topLevelFormGroup]="topLevelFormGroup"
