Revert "Ex UI 1270 accessibility bug fixes (#1693)"
This reverts commit 20adac85ab7e0987f9ff565ad5748410f445aa11.

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/search-result/search-result.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/search-result/search-result.component.html
@@ -136,7 +136,7 @@
   [screenReaderPageLabel]="page"
   [screenReaderCurrentLabel]="'You\'re on page'"></ccd-pagination>
 
-<div id="no_case_found" *ngIf="!(hasResults() || hasDrafts())" class="notification">
+<div *ngIf="!(hasResults() || hasDrafts())" class="notification"
+[attr.aria-describedby]="'No cases found. Try using different filters.' | rpxTranslate">
 {{'No cases found. Try using different filters.' | rpxTranslate}}
 </div>
-<span *ngIf="!(hasResults() || hasDrafts())" aria-describedby="no_case_found">&ZeroWidthSpace;</span>
