--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/base-field/field-read.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/base-field/field-read.html
@@ -1,4 +1,4 @@
-<div  id="{{caseField.id}}" [hidden]="caseField.hidden">
+<div [hidden]="caseField.hidden">
   <ccd-field-read-label [formGroup]="formGroup" [topLevelFormGroup]="topLevelFormGroup" [caseField]="caseField" [withLabel]="withLabel" [markdownUseHrefAsRouterLink]="markdownUseHrefAsRouterLink">
     <ng-container #fieldContainer></ng-container>
   </ccd-field-read-label>
