Make changes to components based on presumed logic and functionality
Note: May be test issue on this commit

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-editor/case-event-completion/case-event-completion.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-editor/case-event-completion/case-event-completion.html
@@ -1,1 +1,10 @@
-<ng-template [cdkPortalOutlet]="selectedComponentPortal"></ng-template>
+<app-case-event-completion-task-cancelled
+    *ngIf="taskState === eventCompletionTaskStates.TaskCancelled"
+    [context]="context"
+    (setEventCanBeCompleted)="eventCanBeCompletedNotify($event)">
+</app-case-event-completion-task-cancelled>
+<app-case-event-completion-task-reassigned
+    *ngIf="taskState === eventCompletionTaskStates.TaskReassigned"
+    [context]="context"
+    (setEventCanBeCompleted)="eventCanBeCompletedNotify($event)">
+</app-case-event-completion-task-reassigned>
