--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-editor/case-event-completion/case-event-completion.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-editor/case-event-completion/case-event-completion.html
@@ -1,10 +1,10 @@
 <app-case-event-completion-task-cancelled
     *ngIf="taskState === eventCompletionTaskStates.TaskCancelled"
     [context]="context"
-    (setEventCanBeCompleted)="notifyEventCompletionCancelled($event)">
+    (notifyEventCompletionCancelled)="setEventCanBeCompleted($event)">
 </app-case-event-completion-task-cancelled>
 <app-case-event-completion-task-reassigned
     *ngIf="taskState === eventCompletionTaskStates.TaskReassigned"
     [context]="context"
-    (setEventCanBeCompleted)="notifyEventCompletionReassigned($event)">
+    (notifyEventCompletionReassigned)="setEventCanBeCompleted($event)">
 </app-case-event-completion-task-reassigned>
