--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-editor/case-edit-submit/case-edit-submit.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-editor/case-edit-submit/case-edit-submit.html
@@ -36,7 +36,7 @@
                     <th *ngIf="!isLabel(field) && !caseEdit.isCaseFlagSubmission" class="valign-top case-field-label">
                       <span class="text-16">{{field.label | rpxTranslate}}</span>
                     </th>
-                    <td class="form-cell case-field-content" [attr.colspan]="isLabel(field) ? '2' : '1'">
+                    <td class="form-cell case-field-content text-16" [attr.colspan]="isLabel(field) ? '2' : '1'">
                       <ccd-field-read
                         [formGroup]="editForm.controls['data']" [topLevelFormGroup]="editForm.controls['data']"
                         [caseField]="summaryCaseField(field)" [context]="paletteContext" [caseFields]="contextFields"></ccd-field-read>
