refactor codebase to get data from  event data

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/read-query-management-field.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/read-query-management-field.component.html
@@ -17,10 +17,9 @@
     (backClicked)="showQueryList = true"
     [caseId]="caseId"
   ></ccd-query-details>
-
   <ng-container *ngIf="query?.children?.length > 0; else queryIsInReview">
     <button id="ask-follow-up-question" class="govuk-button" data-module="govuk-button"
-            [routerLink]="['/query-management', 'query', caseId, '4']"
+            [routerLink]="['/query-management', 'query', caseId, '4', query.id]"
     >
       {{ 'Ask a follow-up question' | rpxTranslate }}
     </button>
