--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-check-your-answers/query-check-your-answers.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-check-your-answers/query-check-your-answers.component.html
@@ -1,5 +1,22 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds-from-desktop">
+    <!-- Error message summary -->
+    <div *ngIf="errorMessages.length > 0" class="govuk-error-summary"
+      aria-labelledby="error-summary-title" role="alert" tabindex="-1"
+      data-module="govuk-error-summary">
+     <h2 class="govuk-error-summary__title" id="error-summary-title">
+       {{ 'There is a problem' | rpxTranslate }}
+     </h2>
+     <div class="govuk-error-summary__body">
+       <ul class="govuk-list govuk-error-summary__list">
+         <li *ngFor="let errorMessage of errorMessages">
+           <a [id]="'error-' + errorMessage.fieldId" href="javascript:void(0)"
+             class="validation-error">{{ errorMessage.description | rpxTranslate }}</a>
+         </li>
+       </ul>
+     </div>
+   </div>
+
     <ng-container *ngIf="queryCreateContext === queryCreateContextEnum.NEW_QUERY">
       <div class="govuk-caption-l">{{ 'Raise a query' | rpxTranslate }}</div>
     </ng-container>
