Fix issue with properties missing from preview userDetail

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-details/query-details.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-details/query-details.component.html
@@ -87,7 +87,7 @@
       </ng-container>
 
       <ng-template #followUpMessage>
-        <div class="query_details_caption">{{ 'Follow-up' | rpxTranslate }}</div>
+        <!-- <div class="query_details_caption">{{ 'Follow-up' | rpxTranslate }}</div> -->
         <table class="govuk-table query-details-table"
                [attr.aria-describedby]="'Follow-up of the response' | rpxTranslate">
           <caption class="govuk-table__caption govuk-table__caption--l">
