--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-details/query-details.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-details/query-details.component.html
@@ -32,7 +32,7 @@
         <td class="govuk-table__cell" [class.govuk-table__cell--no-border]="query.isHearingRelated">
           {{ 'Is the query hearing related?' | rpxTranslate: null : (query.isHearingRelated) }}</td>
       </tr>
-      <tr class="govuk-table__row govuk-table__row--isHearingRelated" *ngIf="query.isHearingRelate === 'Yes'">
+      <tr class="govuk-table__row govuk-table__row--isHearingRelated" *ngIf="query.isHearingRelated === 'Yes'">
         <th scope="row" class="govuk-table__header">{{ 'What is the date of the hearing?' | rpxTranslate }}</th>
         <td class="govuk-table__cell">{{ query.hearingDate | date: 'dd MMM yyyy' }}</td>
       </tr>
