--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-check-your-answers/query-check-your-answers.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-check-your-answers/query-check-your-answers.component.html
@@ -111,7 +111,7 @@
         <dd class="govuk-summary-list__value govuk-summary-list__value--documentAttached">
           <ccd-query-attachments-read
             *ngIf="this.formGroup.get('attachments').value"
-            [attachments]="this.formGroup.get('attachments').value"
+            [attachments]="attachments"
           >
           </ccd-query-attachments-read>
         </dd>
