MultiParty Queries table fixed

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-list/query-list.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-list/query-list.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="queryListData">
   <table class="govuk-table query-list__table">
-    <caption class="govuk-table__caption govuk-table__caption--l">
-      <div>{{ queryListData.partyName }}</div>
+    <caption class="govuk-table__caption govuk-table__caption--l query-list__caption">
+      <div class="query-list__caption-text">{{ queryListData.partyName }}</div>
     </caption>
     <thead class="govuk-table__head">
       <tr class="govuk-table__row query-list__row">
