--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-write/query-write-raise-query/query-write-raise-query.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-write/query-write-raise-query/query-write-raise-query.component.html
@@ -5,7 +5,7 @@
   </div>
 
   <div>
-    <ccd-query-case-details-header></ccd-query-case-details-header>
+    <ccd-query-case-details-header [caseDetails]="caseDetails"></ccd-query-case-details-header>
   </div>
 
   <hr>
