--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-case-details-header/query-case-details-header.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-case-details-header/query-case-details-header.component.html
@@ -1,15 +1,4 @@
-<div *ngIf="caseView">
-  <div class="govuk-body-l govuk-!-margin-bottom-0">{{ caseView.case_id | ccdCaseReference }}</div>
-
-  <ng-container>
-    <ng-container *ngIf="caseView?.state?.title_display; else caseNameMissing">
-      <ccd-markdown [content]="caseView.state.title_display"></ccd-markdown>
-    </ng-container>
-
-    <ng-template #caseNameMissing>
-      <div class="govuk-body-l govuk-!-margin-bottom-0">
-        {{ 'Case name missing' | rpxTranslate }}
-      </div>
-    </ng-template>
-  </ng-container>
+<h1 *ngIf="!caseTitle.label" class="heading-h1">#{{ caseDetails.case_id | ccdCaseReference}}</h1>
+<div *ngIf="caseTitle.label" class="case-title">
+  <ccd-label-field [caseField]="caseTitle" [caseFields]="caseFields"></ccd-label-field>
 </div>
