exui-2227-handing of error (#1769)
* handing of error

* error handling

* unit test fix

* sonar issue

* error message updated

* updated error handling

* version updated

* revert

* version updated

* updated version

* version updated

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-viewer/case-specific-access-request/case-specific-access-request.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-viewer/case-specific-access-request/case-specific-access-request.component.html
@@ -1,5 +1,5 @@
 <exui-error-message
-  *ngIf="formGroup.invalid && submitted"
+  *ngIf="(formGroup.invalid && submitted) || getSpecificAccessError"
   [error]="errorMessage"></exui-error-message>
 <cut-alert type="information">
   {{'Authorisation is needed to access this case.' | rpxTranslate}}<br />
@@ -18,7 +18,6 @@
       <details class="govuk-details" data-module="govuk-details" role="group">
         <summary
           class="govuk-details__summary"
-          role="button"
           aria-expanded="false">
           <span class="govuk-details__summary-text">
             {{'Help with requesting case access' | rpxTranslate}}
