#EXUI-1832: 'Choose file' and 'no file chosen' not being sent via Welsh translation API

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/base-field/field-write.component.scss
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/base-field/field-write.component.scss
@@ -1,1 +1,15 @@
+.input-upload-file {
+  width: 100%;
+  display: none;
+}
+
+.upload-file-container {
+  display: flex;
+  align-items: baseline;
+}
+
+.input-label {
+  width: 8rem;
+}
+
 @import "../base-field/grey-bar.scss";
