--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/document/write-document-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/document/write-document-field.html
@@ -1,21 +1,60 @@
 <div class="form-group" [ngClass]="{'form-group-error bottom-30': !valid}">
   <label [for]="id()">
-    <span class="form-label" attr.aria-label="{{caseField | ccdFieldLabel}}">{{(caseField | ccdFieldLabel)}}</span>
+    <span class="form-label" attr.aria-label="{{caseField | ccdFieldLabel}}"
+      >{{(caseField | ccdFieldLabel)}}</span
+    >
   </label>
-  <span class="form-hint" *ngIf="caseField.hint_text">{{caseField.hint_text | rpxTranslate}}</span>
-  <span class="error-message" *ngIf="fileUploadMessages && !valid">{{fileUploadMessages | rpxTranslate}}</span>
+  <span class="form-hint" *ngIf="caseField.hint_text"
+    >{{caseField.hint_text | rpxTranslate}}</span
+  >
+  <span class="error-message" *ngIf="fileUploadMessages && !valid"
+    >{{fileUploadMessages | rpxTranslate}}</span
+  >
 
   <div>
     <!--<span *ngIf="getUploadedFileName()" class="text-16">File name: {{getUploadedFileName()}}</span>-->
-    <ccd-read-document-field *ngIf="caseField" [caseField]="caseField"></ccd-read-document-field>
+    <ccd-read-document-field
+      *ngIf="caseField"
+      [caseField]="caseField"
+    ></ccd-read-document-field>
   </div>
 
-  <div style='position:relative'>
-    <div [id]="createElementId('fileInputWrapper')" (click)="fileSelectEvent()" (keyup)="fileSelectEvent()"></div>
-    <input class="form-control bottom-30" [id]="id()" type="file" (keydown.Tab)="fileValidationsOnTab()" (change)="fileChangeEvent($event)"
-           accept="{{caseField.field_type.regular_expression}}" #fileInput/>
+  <div style="position: relative">
+    <div
+      [id]="createElementId('fileInputWrapper')"
+      (click)="fileSelectEvent()"
+      (keyup)="fileSelectEvent()"
+    ></div>
+    <div class="upload-file-container">
+      <label
+        [for]="id()"
+        class="button button-secondary input-label"
+        aria-label="Choose file"
+        >{{'Choose file' | rpxTranslate}}</label
+      >
+      <span class="form-control bottom-30">
+        <span>{{fileName | rpxTranslate}}</span>
+      </span>
+    </div>
+    <input
+      [id]="id()"
+      type="file"
+      class="input-upload-file"
+      (keydown.Tab)="fileValidationsOnTab()"
+      (change)="fileChangeEvent($event)"
+      accept="{{caseField.field_type.regular_expression}}"
+      #fileInput
+    />
   </div>
 </div>
 <div class="form-group bottom-30">
-  <button class="button button-secondary" type="button" aria-label="Cancel upload" (click)="cancelUpload()" [disabled]="!isUploadInProgress()">{{'Cancel upload' | rpxTranslate}}</button>
+  <button
+    class="button button-secondary"
+    type="button"
+    aria-label="Cancel upload"
+    (click)="cancelUpload()"
+    [disabled]="!isUploadInProgress()"
+  >
+    {{'Cancel upload' | rpxTranslate}}
+  </button>
 </div>
