--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/read-query-management-field.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/read-query-management-field.component.html
@@ -33,7 +33,7 @@
     <button id="ask-follow-up-question" class="govuk-button" data-module="govuk-button"
     [routerLink]="['/query-management', 'query', caseId, '3', query.id]"
     >
-    {{ 'Response to a query' | rpxTranslate }}
+    {{ 'Respond to a query' | rpxTranslate }}
     </button>
   </ng-container>
 </ng-template>
